metrique/tests/ui/fail/bad_metrics_value.stderr
error: Only structs are supported for entries
 --> tests/ui/fail/bad_metrics_value.rs:4:1
  |
4 | / enum Foo {
5 | | }
  | |_^

error: Only enums are supported for values
 --> tests/ui/fail/bad_metrics_value.rs:8:1
  |
8 | / struct Bar {
9 | | }
  | |_^

error: multiple non-ignored fields for #[metrics(value)]
  --> tests/ui/fail/bad_metrics_value.rs:14:5
   |
14 |     y: u32,
   |     ^

error: only plain fields are supported in #[metrics(value)]
  --> tests/ui/fail/bad_metrics_value.rs:33:5
   |
33 |     u32,
   |     ^^^

error: Unknown field: `p`. Available values: `flatten`, `flatten_entry`, `format`, `ignore`, `name`, `no_close`, `prefix`, `timestamp`, `unit`
  --> tests/ui/fail/bad_metrics_value.rs:38:15
   |
38 |     #[metrics(p = q)]
   |               ^

error: Only named fields are supported
  --> tests/ui/fail/bad_metrics_value.rs:43:1
   |
43 | struct Unit; /* not supported right now */
   | ^^^^^^^^^^^^

error: Unknown field: `p`. Available values: `name`
  --> tests/ui/fail/bad_metrics_value.rs:47:15
   |
47 |     #[metrics(p="q")]
   |               ^

error: Cannot combine value with subfield
  --> tests/ui/fail/bad_metrics_value.rs:51:26
   |
51 | #[metrics(value(string), subfield)]
   |                          ^^^^^^^^

error: Only structs are supported for entries
  --> tests/ui/fail/bad_metrics_value.rs:52:1
   |
52 | / enum Multi {
53 | |     X
54 | | }
   | |_^

error: value does not make sense with dimension-sets
  --> tests/ui/fail/bad_metrics_value.rs:56:1
   |
56 | #[metrics(value(string), emf::dimension_sets = [["X"]])]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `metrics` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Only structs are supported for entries
  --> tests/ui/fail/bad_metrics_value.rs:57:1
   |
57 | / enum Multi2 {
58 | |     X
59 | | }
   | |_^

error[E0412]: cannot find type `Second` in this scope
  --> tests/ui/fail/bad_metrics_value.rs:19:22
   |
19 |     #[metrics(unit = Second)]
   |                      ^^^^^^
  --> $RUST/core/src/marker.rs
   |
   = note: similarly named trait `Send` defined here
   |
help: a trait with a similar name exists
   |
19 -     #[metrics(unit = Second)]
19 +     #[metrics(unit = Send)]
   |
help: consider importing one of these structs
   |
1  + use metrique::unit::Second;
   |
1  + use metrique_writer::unit::Second;
   |
1  + use metrique_writer_core::unit::Second;
   |

error[E0277]: the trait bound `FormattedValue<'_, u32, Foo, _>: Value` is not satisfied
  --> tests/ui/fail/bad_metrics_value.rs:26:5
   |
26 |     x: u32,
   |     ^ the trait `Value` is not implemented for `FormattedValue<'_, u32, Foo, _>`
   |
   = help: the following other types implement trait `Value`:
             &T
             Arc<T>
             Baz2Value
             Baz3Value
             Box<T>
             Cow<'_, T>
             Distribution<V, N>
             Duration
           and $N others
